# vi-ape-x

./: .gitignore  Cargo.toml
actor/: .gitignore  Cargo.toml
actor/src/: actor_settings.rs  args.rs  game_thread.rs  main.rs  master_thread.rs
actor/src/env_thread/: actor_plot_remote.rs  actor_schedule.rs  frame_stack.rs  learner_client.rs  mod.rs  plot_datum_sender.rs  training_schedule.rs
actor/src/env_thread/agent/: mod.rs  prioritized_replay_wrapper.rs  queue_replay_wrapper.rs  remote_replay_wrapper.rs
actor/src/env_thread/agent/replay/: mod.rs  replay_remote.rs
actor/src/env_thread/agent/replay/replay_prioritized/priority_circ_buffer/impls/: save_load.rs
actor/src/env_thread/agent/replay/replay_prioritized/priority_circ_buffer/priority_tree/: traits.rs  tree.rs
actor/src/env_thread/agent/replay/replay_prioritized/priority_circ_buffer/priority_tree/impls/: mod.rs
actor/src/env_thread/agent/replay/replay_prioritized/priority_circ_buffer/priority_tree/min_tree/: min_query.rs
actor/src/env_thread/env/: frame_stack.rs  message_bridge.rs  mod.rs
actor/src/env_thread/env/episode/: mod.rs  state_accum.rs  time_limited_wrapper.rs
actor/src/env_thread/env/episode/basic_episode/: frame_stack.rs  mod.rs  step_memory.rs
actor/src/env_thread/param_updater_thread/: mod.rs
actor/src/env_thread/state_accums/: frame_stack.rs  mod.rs  pipe_filter_to_accum.rs
actor/src/env_thread/state_accums/filters/: compress.rs  mod.rs  pipe.rs  rc.rs
actor/src/game/: mod.rs  score_reader.rs
actor/src/game_interface/: mod.rs  x_shm_seg.rs
actor/src/human_interface/: fragment.glsl  mod.rs
actor/src/master_thread/: mod.rs  thread.rs
actor/src/master_thread/master/: message.rs  mod.rs  thread_id.rs
actor/src/plot_thread/: mod.rs
actor/src/plot_thread/loop/: mod.rs
actor/src/plot_thread/loop/plot_set/: mod.rs
actor/src/ui_thread/: mod.rs  spawn_dummy_ui_thread.rs
coordinator/: Cargo.toml
coordinator/src/: args.rs  main.rs
coordinator_client/: Cargo.toml
coordinator_client/src/: lib.rs
file_io/: Cargo.toml
image/: Cargo.toml
image/src/: image2.rs  image4.rs
learner/: .gitignore  Cargo.toml
learner/src/: create_model.py  learner_plot_remote.rs  learner_schedule.rs  main.rs
model/: Cargo.toml
model/src/: lib.rs  traits.rs
model/src/basic_model/: mod.rs  to_pixels.rs
mono/: .gitignore  Cargo.toml
mono/src/: create_model.py  game_thread.rs  keycodes.rs  main.rs
mono/src/env_thread/: image.rs  mod.rs
mono/src/env_thread/agent/: mod.rs  prioritized_replay_wrapper.rs  queue_replay_wrapper.rs  traits.rs
mono/src/env_thread/agent/basic_model/: mod.rs
mono/src/env_thread/agent/replay/: replay_queue.rs
mono/src/env_thread/agent/replay/replay_prioritized/: mod.rs
mono/src/env_thread/agent/replay/replay_prioritized/priority_circ_buffer/: mod.rs
mono/src/env_thread/agent/replay/replay_prioritized/priority_circ_buffer/impls/: mod.rs  save_load.rs
mono/src/env_thread/agent/replay/replay_prioritized/priority_circ_buffer/priority_tree/: priority.rs
mono/src/env_thread/agent/replay/transition_saving/: mod.rs  transition_serializer.rs
mono/src/env_thread/env/: mod.rs
mono/src/env_thread/env/episode/: status.rs  time_limited_wrapper.rs
mono/src/env_thread/env/episode/basic_episode/: frame_stack.rs  mod.rs  step_memory.rs
mono/src/env_thread/state/: mod.rs  normal.rs
mono/src/game/: digits
mono/src/image/: image2.rs  mod.rs
mono/src/plot_thread/loop/plot_set/: plot.rs
mono/src/ui_thread/: spawn_gl_ui_thread.rs
mono/src/x11_utils/: mod.rs
packets/: Cargo.toml
packets/src/: compressed_image.rs  lib.rs  transition.rs
packets/src/state/: compressed.rs  mod.rs  normal.rs
pj_ai/src/game/: mod.rs
plot/: .gitignore  Cargo.toml
plot/src/: main.rs
plot/src/plot_set/: mod.rs
plot_remote/: Cargo.toml
plot_remote/src/: lib.rs  plot_client.rs
ports/src/: lib.rs
priority_tree/: Cargo.toml
priority_tree/src/: lib.rs  nodes.rs  query_tree.rs
prompt/src/: lib.rs
replay/: Cargo.toml
replay/src/: main.rs  serializer_hack.rs
replay/src/replay_prioritized/: mod.rs
replay/src/replay_prioritized/priority_circ_buffer/: mod.rs
replay/src/replay_prioritized/priority_circ_buffer/priority_tree/max_tree/: max_query.rs
replay_data/: Cargo.toml
replay_data/src/: compressed_image.rs  lib.rs  transition.rs
replay_memories/: Cargo.toml
replay_memories/src/: lib.rs
replay_memories/src/replay_prioritized/: mod.rs
replay_memories/src/replay_prioritized/priority_circ_buffer/: mod.rs
replay_memories/src/replay_prioritized/priority_circ_buffer/impls/: mod.rs  save_load.rs
replay_memories/src/replay_remote/: mod.rs  replay_client.rs
replay_memories/src/replay_ring/: mod.rs
replay_memories/src/replay_ring/priority_circ_buffer/: mod.rs
replay_memories/src/replay_ring/priority_circ_buffer/impls/: mod.rs  sampling.rs
replay_memories/src/transition_saving/: mod.rs
replay_wrappers/: Cargo.toml
replay_wrappers/src/: lib.rs  prioritized_replay_wrapper.rs  queue_replay_wrapper.rs  remote_replay_wrapper.rs
replay_wrappers/src/replay/: mod.rs  replay_queue.rs
replay_wrappers/src/replay/replay_prioritized/priority_circ_buffer/impls/: mod.rs
replay_wrappers/src/replay/replay_prioritized/priority_circ_buffer/priority_tree/impls/sampling/: mod.rs
replay_wrappers/src/replay/transition_saving/: mod.rs  transition_serializer.rs
src/: create_model.py  file_io.rs  game_interface.rs  game_thread.rs  keycodes.rs  main.rs  master_thread.rs  plot_thread.rs  x11_utils.rs
src/env_thread/: agent.rs  env.rs  image.rs  mod.rs  plot_datum_sender.rs  state.rs  training_schedule.rs  transition.rs
src/game/: mod.rs  score_reader.rs
src/game_interface/: mod.rs  v_sync_data.rs
src/human_interface/: mod.rs  shader.rs
src/image/: image2.rs  image4.rs  mod.rs  traits.rs
src/plot_thread/: mod.rs
src/ui_thread/: mod.rs  spawn_dummy_ui_thread.rs  spawn_egui_ui_thread.rs  spawn_gl_ui_thread.rs
src/x11_utils/: mod.rs
start/: Cargo.toml
start/src/: main.rs
tcp_io/: Cargo.toml
tcp_io/src/: lib.rs
(+95 files in other folders)
