[workspace]

resolver = "2"
members = [
  "actor",
  "coordinator",
  "coordinator_client",
  "file_io",
  "image",
  "learner",
  "model",
  "mono",
  "packets",
  "plot",
  "plot_remote",
  "ports",
  "priority_tree",
  "prompt",
  "replay",
  "replay_data",
  "replay_memories",
  "replay_wrappers",
  "start",
  "tcp_io",
]
