[package]
name = "learner"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
coordinator_client = { version = "0.1.0", path = "../coordinator_client" }
file_io = { version = "0.1.0", path = "../file_io" }
local-ip-address = "0.6.1"
model = { version = "0.1.0", path = "../model" }
packets = { version = "0.1.0", path = "../packets" }
ports = { version = "0.1.0", path = "../ports" }
prompt = { version = "0.1.0", path = "../prompt" }
replay_wrappers = { version = "0.1.0", path = "../replay_wrappers" }
serde = { version = "1.0.171", features = ["derive"] }
tcp_io = { version = "0.1.0", path = "../tcp_io" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
