[package]
name = "mono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2.21.0", features = ["xlib_xcb", "glx"] }
x11rb = { version = "0.12.0", features = ["shm", "allow-unsafe-code"] }
libc = "0.2.147"
rand = "0.8.5"
crossbeam-channel = "0.5.8"
serde_json = "1.0.103"
serde = { version = "1.0.171", features = ["derive"] }
bincode = "1.3.3"
glow = "0.12.3"
image = { version = "0.1.0", path = "../image" }
replay_data = { version = "0.1.0", path = "../replay_data" }
model = { version = "0.1.0", path = "../model" }
replay_wrappers = { version = "0.1.0", path = "../replay_wrappers" }
file_io = { version = "0.1.0", path = "../file_io" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
