[package]
name = "replay"
version = "0.1.0"
edition = "2021"

[dependencies]
packets = { version = "0.1.0", path = "../packets" }
replay_data = { version = "0.1.0", path = "../replay_data" }
replay_memories = { version = "0.1.0", path = "../replay_memories" }
serde = { version = "1.0.171", features = ["derive"] }
tcp_io = { version = "0.1.0", path = "../tcp_io" }
