[package]
name = "replay_memories"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
file_io = { version = "0.1.0", path = "../file_io" }
packets = { version = "0.1.0", path = "../packets" }
rand = "0.8.5"
replay_data = { version = "0.1.0", path = "../replay_data" }
serde = { version = "1.0.171", features = ["derive"] }
