[package]
name = "replay_wrappers"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { version = "0.1.0", path = "../model" }
packets = { version = "0.1.0", path = "../packets" }
replay_data = { version = "0.1.0", path = "../replay_data" }
replay_memories = { version = "0.1.0", path = "../replay_memories" }
